apps/sample-backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-backend
  namespace: apps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-backend
  template:
    metadata:
      labels:
        app: sample-backend
    spec:
      containers:
        - name: sample-backend
          image: jagacodes/sample-backend:1.0.0
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
